added images and logos

--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
 <body>
     <nav>
         <ul>
-            <li class="logo"><img src="logo.png" alt="Spotify">Spotify</li>
+            <li class="logo"><img src="https://i.vgy.me/U80YR1.png" alt="Spotify">Spotify</li>
             <li>Home</li>
             <li>About</li>
         </ul>
     </nav>
     <div class="container">
         <div class="songList">
-            <h3><img src="like.svg" alt="">Liked Songs </h3>
+            <h3><img src="https://github.com/user-attachments/assets/67657c58-b895-4f23-a562-915de2f56ac7" alt="">Liked Songs </h3>
             <div>
                 <div class="songItem">
                     <div class="list item1">
                         <img class="cover"  alt="" srcset="">
                         <span class="songName"></span>
-                        <img class="playLogo" src="play.svg" alt="play" id="songPlay" >
+                        <img class="playLogo" src="https://github.com/user-attachments/assets/ada4c9cf-2ff9-44a9-b5c3-9fef54893498" alt="play" id="songPlay" >
                     </div>
                     <div class="list item2">
                         <img class="cover"  alt="" srcset="">
                         <span class="songName"></span>
-                        <img class="playLogo" src="play.svg" alt="play" id="songPlay" >
+                        <img class="playLogo" src="https://github.com/user-attachments/assets/ada4c9cf-2ff9-44a9-b5c3-9fef54893498" alt="play" id="songPlay" >
                     </div>
                     <div class="list item3">
                         <img class="cover" alt="" srcset="">
                         <span class="songName"></span>
-                        <img class="playLogo" src="play.svg" alt="play" id="songPlay">
+                        <img class="playLogo" src="https://github.com/user-attachments/assets/ada4c9cf-2ff9-44a9-b5c3-9fef54893498" alt="play" id="songPlay">
                     </div>
                     <div class="list item4">
                         <img class="cover" alt="" srcset="">
                         <span class="songName"></span>
-                        <img class="playLogo" src="play.svg" alt="play" id="songPlay" >
+                        <img class="playLogo" src="https://github.com/user-attachments/assets/ada4c9cf-2ff9-44a9-b5c3-9fef54893498" alt="play" id="songPlay" >
                     </div>
                     <div class="list item5">
                         <img class="cover" alt="" srcset="">
                         <span class="songName"></span>
-                        <img class="playLogo" src="play.svg" alt="play" id="songPlay" >
+                        <img class="playLogo" src="https://github.com/user-attachments/assets/ada4c9cf-2ff9-44a9-b5c3-9fef54893498" alt="play" id="songPlay" >
                     </div>
                 </div>
             </div>
@@ -54,12 +54,12 @@
     <div class="bottom">
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="player">
-            <img class="blogo blogo-backward" src="backward.svg" alt="backward">
-            <img class="blogo blogo-play"  alt="play" id="masterPlay">
-            <img class="blogo blogo-forward" src="forward.svg" alt="forward">
+            <img class="blogo blogo-backward" src="https://github.com/user-attachments/assets/057a036a-2dac-4234-b799-3529ba83f697" alt="backward">
+            <img class="blogo blogo-play"  src="https://github.com/user-attachments/assets/ada4c9cf-2ff9-44a9-b5c3-9fef54893498" alt="play" id="masterPlay">
+            <img class="blogo blogo-forward" src="https://github.com/user-attachments/assets/7ae2456c-f689-450b-a593-0ac40c6bea18" alt="forward">
         </div>
         <div class="songInfo">
-            <img src="playing.gif" alt="gif" width="40px" id="gif" style="opacity: 0;"> <span>Animals - Martin Garrix</span>
+            <img src="https://i.vgy.me/oSK9xo.gif" alt="gif" width="40px" id="gif" style="opacity: 0;"> <span>Animals - Martin Garrix</span>
         </div>
     </div>
     <script src="script.js"></script>
